# myopen-claw

./: .dockerignore  .env.evolution  .env.example  .gitignore  .test-dispatch.sqlite3-journal  .tmp-openclaw-effective.json  CLAUDE.md  Dockerfile  Dockerfile.evolution-api  README.md  docker-compose.qdrant-example.yml  docker-compose.yml  entrypoint.sh  gen_diag.py  mcp.types.py  memclaw-memclaw-0.9.39.tgz  openclaw.json  pyproject.toml  relatorio_semanal_zind.md  requirements.txt  test_env.py  watchtower-compose.yml
.agents/: README.md  code_organization_rules.SKILL.md  code_organization_rules.py  repo_maintenance.agent.md  repo_maintenance.py
.claude/: .mcp.json  settings.json  settings.local.json
agents/: base_agent.py
configs/: AGENTS.md  BROWSER.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  ROUTING.md  SKILL.md  SOUL.md  TOOLS.md  USER.md  WHATSAPP.md  model-limits.json  model-stack.json
crons/: business_monitor_fetch_and_summarize.cron.md  business_monitor_fetch_and_summarize_cron.py  daily_content_creator_condominios.cron.md  daily_content_creator_ia.cron.md  edital_monitor_fetch_and_summarize.cron.md  edital_monitor_fetch_and_summarize_cron.py  github_weekly_summary.cron.md  humanizer-update.cron.md  lead_fetch_and_enrich.cron.md  lead_fetch_and_enrich_cron.py  mcp_backup_cron.py  morning_brief.cron.md  obsidian_git_pull.cron.md  obsidian_git_push.cron.md  politics_economy_monitor_fetch_and_summarize.cron.md  politics_economy_monitor_fetch_and_summarize_cron.py  reddit_digest_fetch_and_curate.cron.md  reddit_digest_fetch_and_curate_cron.py  (+7 more)
docs/: INDEX.md  (+36 more)
(+371 files in other folders)
